--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,15 +17,22 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/backgroung_green"
+        android:background="@drawable/backgroung_boder"
         android:orientation="vertical"
         android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="80dp"
+        android:weightSum="3"
 
-        android:weightSum="3">
+        android:outlineAmbientShadowColor="#010D0E"
+        android:outlineSpotShadowColor="#040000"
+        android:translationZ="15dp"
+
+
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
+
             android:layout_height="0dp"
             android:layout_weight="0.8"
             android:gravity="center">
@@ -35,7 +42,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Grap share"
-                android:textColor="@color/white"
+                android:textColor="@color/accentColor"
+
                 android:textSize="40dp"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -43,7 +51,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1.4"
+            android:layout_weight="1.7"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -52,15 +60,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="30dp"
-                android:backgroundTint="@color/blue"
+                android:backgroundTint="@color/itemTextColor"
                 android:fontFamily="@font/playfair_display"
                 android:drawableStart="@drawable/ic_email"
                 android:drawablePadding="10dp"
-                android:drawableTint="@color/white"
+                android:drawableTint="@color/accentColor"
+
                 android:hint="Email"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
-                android:textColor="@color/white" />
+                android:textColorHint="@color/itemTextColor"
+                android:textColor="@color/black" />
 
 
             <EditText
@@ -69,24 +79,27 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="30dp"
                 android:layout_marginTop="10dp"
-                android:backgroundTint="@color/white"
+                android:backgroundTint="@color/itemTextColor"
                 android:drawableStart="@drawable/ic_lock"
                 android:drawablePadding="10dp"
-                android:drawableTint="@color/white"
-                android:hint="Password"
+                android:drawableTint="@color/accentColor"
+                android:textColorHint="@color/itemTextColor"
+                android:hint="Mật khẩu"
                 android:inputType="textPassword"
                 android:maxLines="1"
-                android:textColor="@color/white" />
+                android:textColor="@color/black" />
 
             <TextView
                 android:id="@+id/txtForgetPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="30dp"
+                android:layout_marginTop="20dp"
                 android:gravity="end"
-                android:text="Forget password?"
-                android:textColor="@color/white"
-                android:textSize="20dp" />
+                android:text="Quên mật khẩu?"
+                android:textColor="@color/black"
+                android:fontFamily="@font/comfortaabold"
+                android:textSize="15dp" />
 
 
             <com.google.android.material.button.MaterialButton
@@ -97,7 +110,7 @@
                 android:layout_marginTop="10dp"
                 android:backgroundTint="@color/textColor"
                 android:padding="15dp"
-                android:text="Login"
+                android:text="Đăng nhập"
                 android:textStyle="bold"
                 android:textColor="@color/accentColor"
                 app:cornerRadius="20dp"
@@ -113,7 +126,7 @@
                 android:layout_marginTop="10dp"
                 android:backgroundTint="@color/teal_700"
                 android:padding="15dp"
-                android:text="Signup"
+                android:text="Đăng ký"
                 android:textStyle="bold"
                 app:cornerRadius="20dp"
                 app:elevation="10dp" />
@@ -128,19 +141,19 @@
                 <View
                     android:layout_width="120dp"
                     android:layout_height="1dp"
-                    android:background="@color/white" />
+                    android:background="@color/itemTextColor" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
                     android:text="OR"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/black" />
 
                 <View
                     android:layout_width="120dp"
                     android:layout_height="1dp"
-                    android:background="@color/white" />
+                    android:background="@color/itemTextColor" />
             </LinearLayout>
 
         </LinearLayout>
@@ -148,7 +161,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.8"
+            android:layout_weight="0.5"
             android:gravity="center_horizontal"
             android:orientation="horizontal">
 
