--- a/app/src/main/res/layout/fragment_check_info.xml
+++ b/app/src/main/res/layout/fragment_check_info.xml
@@ -128,6 +128,7 @@
             android:layout_gravity="center"
             android:gravity="center_vertical"
             android:layout_marginTop="10dp"
+            android:visibility="gone"
             >
             <TextView
                 android:layout_width="0dp"
@@ -208,7 +209,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="10dp"
-        android:text="Starting position"
+        android:text="Vị trí xuất phát"
         android:textColor="@color/accentColor"
         android:textSize="20sp"
         android:textStyle="bold" />
@@ -228,7 +229,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="5dp"
-        android:text="Your destination"
+        android:text="Điểm đến"
         android:textColor="@color/accentColor"
         android:textSize="20sp"
         android:textStyle="bold" />
@@ -247,7 +248,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="5dp"
-        android:text="Time start"
+        android:text="Thời gian đi"
         android:textColor="@color/accentColor"
         android:textSize="20sp"
         android:textStyle="bold" />
@@ -267,7 +268,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="5dp"
-        android:text="Message"
+        android:text="Thêm mô tả"
         android:textColor="@color/accentColor"
         android:textSize="20sp"
         android:textStyle="bold" />
