--- a/app/src/main/res/layout/request_mypost_item.xml
+++ b/app/src/main/res/layout/request_mypost_item.xml
@@ -25,16 +25,12 @@
                 android:layout_height="wrap_content"
                 android:weightSum="10"
                 android:gravity="center_vertical">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    android:src="@drawable/ic_delete"/>
+
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="7"
-                    android:text="Start position:"
+                    android:text="Điểm xuất phát:"
                     android:layout_marginHorizontal="16dp"
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
@@ -42,8 +38,11 @@
                     android:textSize="18sp"
                     android:textStyle="bold"/>
                 <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                   android:gravity="end"
+                    android:paddingEnd="20dp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3">
                     <ImageView
                         android:id="@+id/ic_yes"
                         android:layout_width="wrap_content"
@@ -57,6 +56,7 @@
                         android:src="@drawable/ic_closecircletwotone"
                         android:visibility="invisible"/>
                     <ImageView
+
                         android:id="@+id/ic_wait"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -96,7 +96,7 @@
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
-                   android:text="Destination:"
+                   android:text="Điểm đến:"
                    android:layout_marginHorizontal="16dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
@@ -120,7 +120,7 @@
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
-                   android:text="Start time: "
+                   android:text="Thời gian: "
                    android:layout_marginHorizontal="16dp"
 
                    android:textColor="@color/black"
