--- a/app/src/main/res/layout/near_place_item.xml
+++ b/app/src/main/res/layout/near_place_item.xml
@@ -6,44 +6,232 @@
     app:cardElevation="8dp"
     app:cardCornerRadius="8dp"
     android:id="@+id/postItemN"
+    android:elevation="30dp"
     android:outlineAmbientShadowColor="#0E5B65"
     android:outlineSpotShadowColor="#5191A1"
     android:translationZ="10dp"
     android:layout_margin="10dp">
 
 
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="vertical"-->
+<!--        android:layout_marginHorizontal="10dp"-->
+<!--        android:layout_marginVertical="10dp"-->
+<!--        android:background="@drawable/backgroung_boder">-->
+
+
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:gravity="center_vertical"-->
+<!--            android:layout_marginTop="10dp"-->
+<!--            >-->
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Pay Money:"-->
+<!--                android:layout_marginHorizontal="16dp"-->
+
+<!--                android:textColor="@color/accentColor"-->
+
+<!--                android:textSize="20sp"-->
+<!--                android:textStyle="bold"/>-->
+<!--            <TextView-->
+<!--                android:id="@+id/txtMoneyN"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="27dp"-->
+<!--                android:textColor="@color/teal_700"-->
+<!--                android:textStyle="bold"-->
+<!--                android:text="20:20"-->
+<!--                android:textSize="20sp"/>-->
+<!--        </LinearLayout>-->
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:gravity="center_vertical"-->
+<!--            android:layout_marginTop="10dp"-->
+<!--            >-->
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Start time: "-->
+<!--                android:layout_marginHorizontal="16dp"-->
+
+<!--                android:textColor="@color/accentColor"-->
+
+<!--                android:textSize="20sp"-->
+<!--                android:textStyle="bold"/>-->
+<!--            <TextView-->
+<!--                android:id="@+id/textTimeStartN"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="30dp"-->
+<!--                android:textColor="@color/teal_700"-->
+<!--                android:textStyle="bold"-->
+<!--                android:text="20:20"-->
+<!--                android:textSize="20sp"/>-->
+<!--        </LinearLayout>-->
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:gravity="center_vertical"-->
+<!--            android:layout_marginTop="10dp"-->
+<!--            >-->
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Days of week: "-->
+<!--                android:layout_marginHorizontal="16dp"-->
+
+<!--                android:textColor="@color/accentColor"-->
+
+<!--                android:textSize="20sp"-->
+<!--                android:textStyle="bold"/>-->
+<!--            <TextView-->
+<!--                android:id="@+id/textdateN"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="2dp"-->
+<!--                android:textColor="@color/teal_700"-->
+<!--                android:textStyle="bold"-->
+<!--                android:text="20:20"-->
+<!--                android:textSize="20sp"/>-->
+<!--        </LinearLayout>-->
+
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:gravity="center_vertical"-->
+<!--            android:layout_marginTop="10dp"-->
+<!--            >-->
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Vehicle: "-->
+<!--                android:layout_marginHorizontal="16dp"-->
+<!--                android:textColor="@color/accentColor"-->
+<!--                android:textSize="20sp"-->
+<!--                android:textStyle="bold"/>-->
+<!--            <TextView-->
+<!--                android:id="@+id/textVehicleN"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="55dp"-->
+<!--                android:textColor="@color/teal_700"-->
+<!--                android:textStyle="bold"-->
+<!--                android:text="20:20"-->
+<!--                android:textSize="20sp"/>-->
+<!--        </LinearLayout>-->
+
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginHorizontal="16dp"-->
+<!--            android:layout_marginTop="16dp"-->
+<!--            android:text="Describe:"-->
+<!--            android:textColor="@color/accentColor"-->
+<!--            android:textSize="20sp"-->
+<!--            android:textStyle="bold" />-->
+<!--        <TextView-->
+<!--            android:id="@+id/txtDescribleN"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="70dp"-->
+<!--            android:layout_marginEnd="20dp"-->
+<!--            android:layout_marginBottom="10dp"-->
+<!--            android:text="Đi theo đường Lê Đại Hành"-->
+<!--            android:textColor="@color/teal_700"-->
+<!--            android:textSize="18sp"-->
+<!--            android:textStyle="bold" />-->
+<!--    </LinearLayout>-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginHorizontal="10dp"
+
         android:layout_marginVertical="10dp"
+        android:outlineAmbientShadowColor="#010D0E"
+        android:outlineSpotShadowColor="#040000"
+
+        android:translationZ="10dp"
+
         android:background="@drawable/backgroung_boder">
 
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="6dp"
+            android:weightSum="10">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="5"
+                android:layout_height="wrap_content"
+                android:text="Điểm đến:"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/accentColor"
+                android:textSize="20sp"
+                android:textStyle="bold"/>
+            <TextView
+                android:id="@+id/txtStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="5dp"
+                android:text="!"
+                android:textSize="35sp"
+                android:textColor="#FF0303"
+                android:visibility="gone"/>
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/txtDestination"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="50dp"
+            android:layout_marginStart="70dp"
+            android:text="Vehicle"
+            android:textColor="@color/teal_700"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:weightSum="2"
             android:layout_gravity="center"
             android:gravity="center_vertical"
             android:layout_marginTop="10dp"
             >
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Pay Money:"
-                android:layout_marginHorizontal="16dp"
+                android:layout_weight="1"
+                android:text="Số tiền"
+                android:layout_marginStart="16dp"
 
                 android:textColor="@color/accentColor"
 
                 android:textSize="20sp"
                 android:textStyle="bold"/>
             <TextView
-                android:id="@+id/txtMoneyN"
-                android:layout_width="wrap_content"
+                android:id="@+id/txtMoney"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="27dp"
+                android:layout_weight="1"
+                android:layout_marginStart="20dp"
                 android:textColor="@color/teal_700"
                 android:textStyle="bold"
                 android:text="20:20"
@@ -52,25 +240,26 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:weightSum="2"
             android:layout_gravity="center"
             android:gravity="center_vertical"
             android:layout_marginTop="10dp"
             >
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Start time: "
-                android:layout_marginHorizontal="16dp"
-
+                android:layout_weight="1"
+                android:text="Thời gian đi"
+                android:layout_marginStart="16dp"
                 android:textColor="@color/accentColor"
-
                 android:textSize="20sp"
                 android:textStyle="bold"/>
             <TextView
-                android:id="@+id/textTimeStartN"
-                android:layout_width="wrap_content"
+                android:id="@+id/textTimeStart"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
+                android:layout_marginStart="20dp"
+                android:layout_weight="1"
                 android:textColor="@color/teal_700"
                 android:textStyle="bold"
                 android:text="20:20"
@@ -79,25 +268,29 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:weightSum="2"
             android:layout_gravity="center"
             android:gravity="center_vertical"
             android:layout_marginTop="10dp"
+            android:visibility="gone"
             >
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Days of week: "
-                android:layout_marginHorizontal="16dp"
+                android:layout_weight="1"
+                android:text="Ngày trong tuần "
+                android:layout_marginStart="16dp"
 
                 android:textColor="@color/accentColor"
 
                 android:textSize="20sp"
                 android:textStyle="bold"/>
             <TextView
-                android:id="@+id/textdateN"
-                android:layout_width="wrap_content"
+                android:id="@+id/textdate"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="2dp"
+                android:layout_weight="1"
+                android:layout_marginStart="20dp"
                 android:textColor="@color/teal_700"
                 android:textStyle="bold"
                 android:text="20:20"
@@ -108,23 +301,26 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:weightSum="2"
             android:layout_gravity="center"
             android:gravity="center_vertical"
             android:layout_marginTop="10dp"
             >
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Vehicle: "
-                android:layout_marginHorizontal="16dp"
+                android:layout_weight="1"
+                android:text="Phương tiện "
+                android:layout_marginStart="16dp"
                 android:textColor="@color/accentColor"
                 android:textSize="20sp"
                 android:textStyle="bold"/>
             <TextView
-                android:id="@+id/textVehicleN"
-                android:layout_width="wrap_content"
+                android:id="@+id/textVehicle"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="55dp"
+                android:layout_weight="1"
+                android:layout_marginStart="20dp"
                 android:textColor="@color/teal_700"
                 android:textStyle="bold"
                 android:text="20:20"
@@ -136,12 +332,12 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="16dp"
-            android:text="Describe:"
+            android:text="Mô tả"
             android:textColor="@color/accentColor"
             android:textSize="20sp"
             android:textStyle="bold" />
         <TextView
-            android:id="@+id/txtDescribleN"
+            android:id="@+id/txtDescrible"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="70dp"
