--- a/app/src/main/res/layout/fragment_dialog_feedback.xml
+++ b/app/src/main/res/layout/fragment_dialog_feedback.xml
@@ -16,6 +16,7 @@
         android:paddingVertical="20dp"
         android:minWidth="520dp"
         >
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -30,17 +31,81 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
           >
-
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Nơi xuất phát"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="16dp"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                android:textStyle="bold"/>
+                android:layout_height="wrap_content">
+                <androidx.coordinatorlayout.widget.CoordinatorLayout
+                    android:layout_width="90dp"
+                    android:layout_height="90dp">
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/imgProfileRequest"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
+                        android:src="@drawable/hamzi" />
+                </androidx.coordinatorlayout.widget.CoordinatorLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingHorizontal="20dp"
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/txtnameRequet"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:text="Võ Quang Tấn"
+
+
+                        android:layout_marginTop="5dp"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"
+                        android:textStyle="bold"/>
+                    <RelativeLayout
+                        android:id="@+id/rating"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        >
+
+                        <com.google.android.material.textview.MaterialTextView
+                            android:id="@+id/txtPlaceDRating"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical"
+                            android:text="3"
+                            android:textColor="@color/black"
+                            android:textStyle="bold"
+                            app:drawableStartCompat="@drawable/ic_rating"
+                            app:drawableTint="@color/primaryColor" />
+
+                        <com.google.android.material.textview.MaterialTextView
+                            android:id="@+id/txtPlaceDRatingCount"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_toEndOf="@+id/txtPlaceDRating"
+                            android:gravity="center"
+                            android:paddingStart="15dp"
+                            android:paddingEnd="1dp"
+                            android:paddingTop="2dp"
+                            android:text="(123)"
+                            android:textColor="@color/itemTextColor" />
+
+
+
+
+                    </RelativeLayout>
+                    <TextView
+                        android:id="@+id/txtvehicle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Vehicle"
+                        android:textColor="@color/teal_700"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+            </LinearLayout>
+
             <TextView
                 android:id="@+id/txtIDR"
                 android:layout_width="wrap_content"
@@ -57,43 +122,8 @@
                 android:textColor="@color/white"
                 android:textSize="1sp"
                 android:textStyle="bold"/>
-            <TextView
-                android:id="@+id/txtStartPositionF"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="50dp"
-                android:layout_marginStart="70dp"
-                android:text="Vehicle"
-                android:fontFamily="@font/comfortaabold"
-                android:textColor="@color/itemTextColor"
-                android:textSize="18sp"
-                android:textStyle="bold" />
 
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center_vertical"
-                android:layout_marginTop="10dp"
-                >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Nơi đến"
-                    android:layout_marginHorizontal="16dp"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    android:textStyle="bold"/>
-                <TextView
-                    android:id="@+id/txtDestinationF"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="25dp"
-                    android:textColor="@color/itemTextColor"
-                    android:text="20:20"
-                    android:textSize="18sp"/>
-            </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -145,35 +175,6 @@
                     android:layout_marginStart="25dp"
                     android:textColor="@color/teal_700"
                     android:text="20:20"
-                    android:fontFamily="@font/comfortaabold"
-                    android:textSize="18sp"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center_vertical"
-                android:layout_marginTop="10dp"
-                >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Tin nhắn"
-                    android:layout_marginHorizontal="16dp"
-
-                    android:textColor="@color/black"
-
-                    android:textSize="18sp"
-                    android:textStyle="bold"/>
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/textMess111"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="25dp"
-                    android:textColor="@color/teal_700"
-                    android:text="123456789"
                     android:fontFamily="@font/comfortaabold"
                     android:textSize="18sp"/>
 
