--- a/app/src/main/res/layout/fragment_dialog_request_choose_mypost.xml
+++ b/app/src/main/res/layout/fragment_dialog_request_choose_mypost.xml
@@ -29,7 +29,7 @@
             android:layout_marginVertical="10dp"
             android:maxLines="2"
             android:textColor="@color/black"
-            android:text="Grapshare sẽ lấy vị trí hện tại để làm nơi xuất phát"
+            android:text="Bạn muốn xóa hay cập nhật bài đăng"
             android:textSize="15sp"/>
 
         <LinearLayout
@@ -41,17 +41,18 @@
                 android:id="@+id/btnNo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/backgroung_gray"
-                android:text="thoát"
+                android:background="@drawable/backgroung_red"
+                android:text="Xóa"
                 android:textColor="@color/blue"
                 />
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnYes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="50dp"
                 android:background="@drawable/backgroung_green"
-                android:text="Đồng ý"
+                android:text="Câp nhật"
+                android:textColor="@color/blue"
                 />
         </LinearLayout>
     </LinearLayout>
