--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,6 +17,39 @@
         android:layout_width="match_parent"
         android:layout_height="120dp">
 
+        <LinearLayout
+            android:id="@+id/txtChooseTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginBottom="16dp"
+            app:boxCornerRadiusBottomEnd="25dp"
+            app:boxCornerRadiusBottomStart="25dp"
+            app:boxCornerRadiusTopEnd="25dp"
+            app:boxCornerRadiusTopStart="25dp"
+            android:elevation="10dp"
+            app:layout_anchor="@id/view"
+            app:layout_anchorGravity="top|end"
+            android:orientation="vertical"
+            >
+            <TextView
+                android:id="@+id/textTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"/>
+            <Button
+                android:id="@+id/btnTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/textColor"
+                android:text="Thời gian đi"
+                android:textSize="15sp"
+                android:fontFamily="@font/comfortaabold"
+                android:textColor="@color/black"
+                />
+
+        </LinearLayout>
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/txtChoosePlace"
             android:layout_width="match_parent"
@@ -33,7 +66,6 @@
             app:layout_anchorGravity="bottom|center"
             app:boxBackgroundColor="@color/white"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
-
             >
             <AutoCompleteTextView
                 android:id="@+id/auto_slect"
@@ -125,6 +157,71 @@
         android:background="@color/black"
         app:fabCustomSize="50dp"
         app:tint="@color/primaryColor" />
+    <LinearLayout
+        android:id="@+id/inflayourUser"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginBottom="26dp"
+        android:clipToPadding="false"
+android:visibility="gone"
+        android:paddingRight="8dp"
+        android:background="@drawable/backgroung_boder"
+        android:weightSum="2">
+
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:layout_weight="0.5"
+            android:scaleType="centerCrop"
+            android:src="@color/black" />
+
+        <LinearLayout
+
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1.5"
+            android:orientation="vertical"
+            android:padding="10dp"
+            >
+            <TextView
+                android:id="@+id/txtPlaceName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:fontFamily="@font/comfortaabold"
+                android:text="Họ và tên"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/txtKhoanCach"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:text="Khoản cách"
+                android:fontFamily="@font/comfortaabold"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:id="@+id/txttime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:text="thời gian"
+                android:fontFamily="@font/comfortaabold"
+                android:textColor="@color/black" />
+        </LinearLayout>
+    </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/placesRecyclerView"
         android:layout_width="match_parent"
@@ -134,6 +231,7 @@
         android:clipToPadding="false"
         android:orientation="horizontal"
         android:paddingLeft="8dp"
+        android:visibility="gone"
         android:paddingRight="8dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/place_item_layout" />
