--- a/app/src/main/res/layout/fragment_info_my_post.xml
+++ b/app/src/main/res/layout/fragment_info_my_post.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.InfoMyPostFragment"
+    tools:context=".fragment.ChooseTaiXeMyPostFragment"
     android:background="@color/blue">
 
     <androidx.recyclerview.widget.RecyclerView
