--- a/app/src/main/res/layout/fragment_near_place.xml
+++ b/app/src/main/res/layout/fragment_near_place.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/blue"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.NearPlaceFragment">
 
     <LinearLayout
@@ -27,27 +29,38 @@
                 android:textColor="@color/blue"/>
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="120dp"
-                android:layout_height="50dp"
+                android:layout_height="45dp"
                 android:layout_marginHorizontal="16dp"
-                android:background="@drawable/backgroung_blue_boder"
+                android:paddingTop="0dp"
+                app:boxBackgroundColor="@color/textColor"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                 android:gravity="center"
-                android:paddingBottom="3dp"
 
                 >
                 <AutoCompleteTextView
-
                     android:id="@+id/auto_slect_distance"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:textColorLink="@color/Daryellow"
-                    android:inputType="none"/>
+                    android:inputType="none"
+                    android:layout_marginTop="0dp"
+                   android:background="@drawable/backgroung_blue_boder"
+                    />
             </com.google.android.material.textfield.TextInputLayout>
-
+            <TextView
+                android:id="@+id/txtCountPost"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="4"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:textColor="@color/Daryellow"
+                android:fontFamily="@font/comfortaabold"
+                />
         </LinearLayout>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/NearRecyclerView"
             android:layout_width="match_parent"
+
             android:outlineAmbientShadowColor="@color/blue"
             android:outlineSpotShadowColor="@color/blue"
             android:layout_height="0dp"
