--- a/app/src/main/res/layout/fragment_share_location.xml
+++ b/app/src/main/res/layout/fragment_share_location.xml
@@ -18,7 +18,7 @@
         android:layout_height="120dp">
         <LinearLayout
             android:id="@+id/txtChooseTime"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="6dp"
@@ -28,6 +28,7 @@
             app:boxCornerRadiusTopEnd="25dp"
             app:boxCornerRadiusTopStart="25dp"
             android:elevation="10dp"
+            android:gravity="center"
             app:layout_anchor="@id/view"
             app:layout_anchorGravity="top|end"
             android:orientation="horizontal"
@@ -37,27 +38,37 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:visibility="gone"/>
-
-            <TextView
-                android:id="@+id/textTrangThai"
+            <Button
+                android:id="@+id/btnStart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Chưa đi"
-                android:textColor="@color/blue"
-                android:textSize="20sp"
+                android:backgroundTint="@color/teal_700"
+                android:text="bắt đầu"
+                android:textSize="10sp"
+                android:fontFamily="@font/comfortaabold"
+                android:textColor="@color/white"
                 android:textStyle="bold"
-                android:layout_marginEnd="80dp"
+                />
+            <Button
+                android:id="@+id/btndatoi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/itemTextColor"
+                android:layout_marginHorizontal="10dp"
+                android:text="Đã tới"
+                android:textSize="10sp"
+                android:fontFamily="@font/comfortaabold"
+                android:textColor="@color/textColor"
                 />
             <Button
                 android:id="@+id/btnTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/Daryellow"
-                android:text="Hoàn Thành"
-                android:textSize="15sp"
-                android:visibility="gone"
+                android:backgroundTint="@color/itemTextColor"
+                android:text="đã thanh toán"
+                android:textSize="10sp"
                 android:fontFamily="@font/comfortaabold"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 />
 
         </LinearLayout>
@@ -167,89 +178,7 @@
     android:layout_marginStart="0dp"
     android:layout_marginBottom="31dp"
     android:orientation="horizontal"
-
-    >
-    <LinearLayout
-        android:visibility="gone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@drawable/backgroung_boder"
-        android:weightSum="2">
-
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="0dp"
-            android:layout_height="100dp"
-            android:layout_weight="0.5"
-            android:scaleType="centerCrop"
-            android:src="@color/black" />
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1.5"
-            android:orientation="vertical"
-            android:padding="10dp"
-            >
-            <TextView
-                android:id="@+id/txtPlaceName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:text="Vox Quang Taans"
-                android:textColor="@color/black"
-                android:textStyle="bold" />
-            <RelativeLayout
-                android:id="@+id/rating"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
-
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/txtPlaceDRating"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:text="3"
-                    android:textColor="@color/black"
-                    android:textStyle="bold"
-                    app:drawableStartCompat="@drawable/ic_rating"
-                    app:drawableTint="@color/primaryColor" />
-
-                <com.google.android.material.textview.MaterialTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toEndOf="@+id/txtPlaceDRating"
-                    android:gravity="center"
-                    android:paddingStart="15dp"
-                    android:paddingEnd="1dp"
-                    android:paddingTop="2dp"
-                    android:text="(123)"
-                    android:textColor="@color/itemTextColor" />
-
-
-
-
-            </RelativeLayout>
-
-
-
-            <TextView
-                android:id="@+id/txtPlaceAddress"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:text="Đang đi"
-                android:textColor="@color/black" />
-
-        </LinearLayout>
-    </LinearLayout>
-</LinearLayout>
+    />
 
 
 
