--- a/app/src/main/res/layout/info_window_layout.xml
+++ b/app/src/main/res/layout/info_window_layout.xml
@@ -12,6 +12,7 @@
         android:padding="10dp">
 
         <TextView
+            android:visibility="gone"
             android:id="@+id/txtLocationName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -33,7 +34,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Distance : "
+                android:text="Khoản cách : "
                 android:textColor="@color/itemTextColor"
                 android:textStyle="bold" />
 
@@ -58,13 +59,15 @@
             android:orientation="horizontal">
 
             <TextView
+                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Estimated Time : "
+                android:text="Thời gian "
                 android:textColor="@color/itemTextColor"
                 android:textStyle="bold" />
 
             <TextView
+                android:visibility="gone"
                 android:id="@+id/txtLocationTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
