--- a/app/src/main/res/layout/request_mypost_item.xml
+++ b/app/src/main/res/layout/request_mypost_item.xml
@@ -12,133 +12,133 @@
     android:layout_margin="10dp">
 
 
-       <LinearLayout
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:orientation="vertical"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
 
-           android:layout_marginHorizontal="10dp"
-           android:layout_marginVertical="5dp">
-<!--           android:background="@drawable/backgroung_boder"-->
-            <LinearLayout
-                android:layout_width="match_parent"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="5dp">
+        <!--           android:background="@drawable/backgroung_boder"-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="10"
+            android:gravity="center_vertical">
+
+            <TextView
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:weightSum="10"
-                android:gravity="center_vertical">
-
-                <TextView
-                    android:layout_width="0dp"
+                android:layout_weight="7"
+                android:text="Điểm đến"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:textStyle="bold"/>
+            <RelativeLayout
+                android:gravity="end"
+                android:paddingEnd="20dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3">
+                <ImageView
+                    android:id="@+id/ic_yes"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="7"
-                    android:text="Điểm xuất phát:"
-                    android:layout_marginHorizontal="16dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginTop="10dp"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    android:textStyle="bold"/>
-                <RelativeLayout
-                   android:gravity="end"
-                    android:paddingEnd="20dp"
-                    android:layout_width="0dp"
+                    android:src="@drawable/ic_checkcircletwotone"
+                    android:visibility="invisible"/>
+                <ImageView
+                    android:id="@+id/ic_no"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="3">
-                    <ImageView
-                        android:id="@+id/ic_yes"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_checkcircletwotone"
-                        android:visibility="invisible"/>
-                    <ImageView
-                        android:id="@+id/ic_no"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_closecircletwotone"
-                        android:visibility="invisible"/>
-                    <ImageView
+                    android:src="@drawable/ic_closecircletwotone"
+                    android:visibility="invisible"/>
+                <ImageView
 
-                        android:id="@+id/ic_wait"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_exclamationcircleoutlined"
-                        android:visibility="invisible"/>
-                </RelativeLayout>
+                    android:id="@+id/ic_wait"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_reloadoutlined"
+                    android:visibility="invisible"/>
+            </RelativeLayout>
 
-            </LinearLayout>
+        </LinearLayout>
 
-           <TextView
-               android:id="@+id/txtIDR"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:text=""
-               android:textColor="@color/black"
-               android:textSize="1sp"
-               android:textStyle="bold"/>
-           <TextView
-               android:id="@+id/txtStartPositionR"
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:layout_marginHorizontal="50dp"
-               android:layout_marginStart="70dp"
-               android:text="Vehicle"
-               android:textColor="@color/teal_700"
-               android:textSize="20sp"
-               android:textStyle="bold" />
+        <TextView
+            android:id="@+id/txtIDR"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textColor="@color/black"
+            android:textSize="1sp"
+            android:textStyle="bold"/>
+        <TextView
+            android:id="@+id/txtStartPositionR"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="50dp"
+            android:layout_marginStart="70dp"
+            android:text="Vehicle"
+            android:textColor="@color/teal_700"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center_vertical"
+            android:layout_marginTop="10dp"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Thời gian: "
+                android:layout_marginHorizontal="16dp"
 
-           <LinearLayout
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:layout_gravity="center"
-               android:gravity="center_vertical"
-               android:layout_marginTop="10dp"
-               >
-               <TextView
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:text="Điểm đến:"
-                   android:layout_marginHorizontal="16dp"
-                   android:textColor="@color/black"
-                   android:textSize="18sp"
-                   android:textStyle="bold"/>
-               <TextView
-                   android:id="@+id/txtDestinationR"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:layout_marginStart="27dp"
-                   android:textColor="@color/teal_700"
-                   android:text="20:20"
-                   android:textSize="20sp"/>
-           </LinearLayout>
-           <LinearLayout
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:layout_gravity="center"
-               android:gravity="center_vertical"
-               android:layout_marginTop="10dp"
-               >
-               <TextView
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:text="Thời gian: "
-                   android:layout_marginHorizontal="16dp"
+                android:textColor="@color/black"
 
-                   android:textColor="@color/black"
-
-                   android:textSize="18sp"
-                   android:textStyle="bold"/>
-               <TextView
-                   android:id="@+id/textTimeStartR"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:layout_marginStart="30dp"
-                   android:textColor="@color/teal_700"
-                   android:text="20:20"
-                   android:textSize="20sp"/>
-           </LinearLayout>
+                android:textSize="18sp"
+                android:textStyle="bold"/>
+            <TextView
+                android:id="@+id/textTimeStartR"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
+                android:textColor="@color/teal_700"
+                android:text="20:20"
+                android:textSize="20sp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center_vertical"
+            android:layout_marginTop="10dp"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Mô tả:"
+                android:layout_marginHorizontal="16dp"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:textStyle="bold"/>
+            <TextView
+                android:id="@+id/txtDestinationR"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="27dp"
+                android:textColor="@color/teal_700"
+                android:text="20:20"
+                android:textSize="20sp"/>
+        </LinearLayout>
 
 
-       </LinearLayout>
+
+    </LinearLayout>
 
 
 </androidx.cardview.widget.CardView>
