--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -27,7 +27,7 @@
 
 
 
-    <style name="ActionBarTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="ActionBarTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
 
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/primaryColor</item>
